@@ -121,6 +121,8 @@ Addr VG_(client__dl_sysinfo_int80) = 0;
    in nptl/allocatestack.c */
 SizeT* VG_(client__stack_cache_actsize__addr) = 0;
 
+client__gnu_get_libc_version_type VG_(client__gnu_get_libc_version_addr) = 0;
+
 #if defined(VGO_solaris)
 /* Address of variable vg_vfork_fildes in vgpreload_core.so.0
    (vg_preloaded.c). */
