@@ -405,6 +405,8 @@ void VG_(redir_notify_new_DebugInfo)( const DebugInfo* newdi )
    const HChar* const pthread_soname = "libpthread.so.0";
    const HChar* const pthread_stack_cache_actsize_varname
       = "stack_cache_actsize";
+   const HChar* const libc_soname = "libc.so.6";
+   const HChar* const libc_gnu_get_libc_version_funcname = "gnu_get_libc_version";
 #if defined(VGO_solaris)
    Bool         vg_vfork_fildes_var_search = False;
    const HChar* const vg_preload_core_soname = "vgpreload_core.so.0";
@@ -506,7 +508,8 @@ void VG_(redir_notify_new_DebugInfo)( const DebugInfo* newdi )
 
    dehacktivate_pthread_stack_cache_var_search = 
       SimHintiS(SimHint_no_nptl_pthread_stackcache, VG_(clo_sim_hints))
-      && 0 == VG_(strcmp)(newdi_soname, pthread_soname);
+      && (0 == VG_(strcmp)(newdi_soname, pthread_soname) ||
+          0 == VG_(strcmp)(newdi_soname, libc_soname));
 
 #if defined(VGO_solaris)
    vg_vfork_fildes_var_search =
@@ -529,6 +532,20 @@ void VG_(redir_notify_new_DebugInfo)( const DebugInfo* newdi )
                                      &demangled_sopatt,
                                      &demangled_fnpatt,
                                      &isWrap, &becTag, &becPrio );
+
+         if (isText && dehacktivate_pthread_stack_cache_var_search) {
+             if (0 == VG_(strcmp)(*names, libc_gnu_get_libc_version_funcname)) {
+                 if ( VG_(clo_verbosity) > 1 ) {
+                    VG_(message)( Vg_DebugMsg,
+                                  "deactivate nptl pthread stackcache via tunable:"
+                                  " found symbol %s at addr %p\n",
+                                  *names, (void*) sym_avmas.main);
+                 }
+                 VG_(client__gnu_get_libc_version_addr) = (client__gnu_get_libc_version_type) sym_avmas.main;
+                 dehacktivate_pthread_stack_cache_var_search = False;
+             }
+         }
+
          /* ignore data symbols */
          if (!isText) {
             /* But search for dehacktivate stack cache var if needed. */
